syntax = "proto3";

import "google/protobuf/timestamp.proto";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

message SensorEventProto {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string hubId = 3;
  oneof payload {
    MotionSensorProto motion_sensor = 4;
    TemperatureSensorProto temperature_sensor = 5;
    LightSensorProto light_sensor = 6;
    ClimateSensorProto climate_sensor = 7;
    SwitchSensorProto switch_sensor = 8;
  }
}

message MotionSensorProto {
  int32 link_quality = 1; // показатель качества связи. Чем выше значение, тем лучше качество связи.
  bool motion = 2;     // указание на наличие движения или чьего-то присутствия
  int32 voltage = 3;      // значение напряжения, которое может использоваться для оценки текущего напряжения в сенсоре или связанном устройстве
}

message TemperatureSensorProto {
  int32 temperature_c = 1; // уровень температуры по шкале Цельсия
  int32 temperature_f = 2; // уровень температуры по Фаренгейту
}

message LightSensorProto {
  int32 link_quality = 1; // уровень сигнала
  int32 luminosity = 2;   // уровень освещенности
}

message ClimateSensorProto {
  int32 temperature_c = 1;  // уровень температуры по шкале Цельсия
  int32 humidity = 2;       // влажность
  int32 co2_level = 3;      // уровень CO2
}

message SwitchSensorProto {
  bool state = 1; // состояние переключателя: включен/выключен
}